Add parallel requests JSFiddle. Fix presentation

--- a/promises/index.html
+++ b/promises/index.html
@@ -64,11 +64,11 @@
     </section>
     <section class="slide">
         <h2>Simple XMLHttpRequest with callbacks</h2>
-        <script async src="https://jsfiddle.net/pterolex/ev4ne1ym/embed/js,result/dark/"></script>
+        <script async src="https://jsfiddle.net/pterolex/ev4ne1ym/2/embed/js,result/dark/"></script>
     </section>
     <section class="slide">
         <h2>Two XMLHttpRequests with callbacks</h2>
-        <script async src="https://jsfiddle.net/pterolex/c5v0r0kc/embed/js,result/dark/"></script>
+        <script async src="https://jsfiddle.net/pterolex/c5v0r0kc/4/embed/js,result/dark/"></script>
     </section>
 	<section class="slide">
 		<h2>Two parallel XMLHttpRequests?</h2>
@@ -112,11 +112,8 @@
                 A pending promise can become either fulfilled with a value, or rejected with a reason (error). When either of these happens, the associated handlers queued up by a promise's then method are called.
             </p>
             </p>
-            <p>As the <em>Promise.prototype.then()</em> and <em>Promise.prototype.catch()</em> methods return promises, they can be chained—an operation called composition.</p>
+            <p>As the <em>Promise.prototype.then()</em> and <em>Promise.prototype.catch()</em> methods return promises, they can be chained – an operation called composition.</p>
         </div>
-        <style type="text/css">
-
-        </style>
     </section>
     <section class="slide" id="promises_3">
         <h2>Promises</h2>
@@ -136,8 +133,8 @@
         <script async src="https://jsfiddle.net/pterolex/ga76mw0r/embed/js,result/dark/"></script>
     </section>
     <section class="slide">
-        <h2>Two parallel requests?</h2>
-        <script async src="https://jsfiddle.net/pterolex/48omzpw5/1/embed/js,result/dark/"></script>
+        <h2>Two parallel requests? Easy</h2>
+        <script async src="https://jsfiddle.net/pterolex/48omzpw5/4/embed/js,result/dark/"></script>
     </section>
     <section class="slide">
         <h2>Promises antipatterns</h2>
@@ -198,9 +195,19 @@
         <h2>Fetch example</h2>
         <script async src="https://jsfiddle.net/pterolex/5bbLsru0/1/embed/js,result/dark/"></script>
     </section>
+    <section class="slide">
+        <h2>Fetch browser support</h2>
+        <iframe src="http://caniuse.com/#search=fetch"></iframe>
+    </section>
+    <section class="slide">
+        <h2 class="shout">
+            <a href="https://github.com/github/fetch">Fetch polyfill</a>
+        </h2>
+    </section>
 	<section class="slide">
 		<h2>Async/await</h2>
-        <script async src="https://jsfiddle.net/pterolex/9f6bhhxs/embed/js,result/dark/"></script>
+        <script async src="//jsfiddle.net/9f6bhhxs/1/embed/js,result/dark/"></script>
+        <script async src="https://jsfiddle.net/pterolex/9f6bhhxs/2/embed/js,result/dark/"></script>
 	</section>
 	<div class="progress"></div>
 	<script src="shower/shower.min.js"></script>
