Update JS basics presentation: add Object.freeze, Object.seal and info frame

--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -42,6 +42,13 @@
 	</section>
     <section class="slide">
         <h2>A bit of history (ECMA-262)</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Brendan_Eich_Mozilla_Foundation_official_photo.jpg/267px-Brendan_Eich_Mozilla_Foundation_official_photo.jpg">
+        <p>
+            JavaScript was originally developed in 10 days in May 1995 by Brendan Eich, while he was working for Netscape Communications Corporation.
+        </p>
+    </section>
+    <section class="slide">
+        <h2>A bit of history (ECMA-262)</h2>
         <p>1997 – ECMAScript original standard</p>
         <p>1998 – ECMAScript 2</p>
         <p>1999 – ECMAScript 3</p>
@@ -61,7 +68,6 @@
             <li>Using delete on a variable name <em>delete myVariable;</em></li>
             <li>Using eval or arguments as variable or function argument name</li>
             <li>Using one of the newly reserved keywords: <em>implements, interface, let, package, private, protected, public, static, and yield</em></li>
-            <li>Declaring function in blocks if (a&lt;b){ function f(){} }</li>
             <li>Obvious errors:
                 <ul>
                     <li>Declaring twice the same name for a property name in an object literal {a: 1, b: 3, a: 7}</li>
@@ -179,11 +185,19 @@
     </section>
     <section class="slide">
         <h2>Array.isArray</h2>
-        <script async src="https://jsfiddle.net/pterolex/ta18eL7c/embed/"></script>
+        <script async src="https://jsfiddle.net/pterolex/ta18eL7c/embed/js,result/dark/"></script>
     </section>
     <section class="slide">
         <h2>Object.keys</h2>
         <script async src="https://jsfiddle.net/pterolex/ed52zxx4/embed/js,result/dark/"></script>
+    </section>
+    <section class="slide">
+        <h2>Object.freeze</h2>
+        <script async src="https://jsfiddle.net/pterolex/jpbpyzo8/1/embed/js,result/dark/"></script>
+    </section>
+    <section class="slide">
+        <h2>Object.seal</h2>
+        <script async src="https://jsfiddle.net/pterolex/vb9hh4vc/embed/js,result/dark/"></script>
     </section>
 	<section class="slide">
 		<h2>References</h2>
