Move modules to root folder

--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen-16x10.css">
+	<link rel="stylesheet" href="../node_modules/shower-ribbon/styles/screen-16x10.css">
     <style>
         .slide {
             padding-top: 25px;
@@ -26,7 +26,9 @@
 		<h1>JavaScript basics</h1>
 	</header>
 	<section class="slide" id="cover">
-		<h2>JavaScript basics</h2>
+        <h2>JavaScript basics</h2>
+		<h3>ECMAScript5 Standard</h3>
+
         <img src="pictures/logo.png" />
 		<style>
             #cover {
@@ -209,6 +211,6 @@
         </ul>
 	</section>
 	<div class="progress"></div>
-	<script src="node_modules/shower-core/shower.min.js"></script>
+	<script src="../node_modules/shower-core/shower.min.js"></script>
 </body>
 </html>
