Add Git presentation

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body class="shower list">
 	<header class="caption">
-		<h1>JavaScript basics</h1>
+		<h1>Knowledge sharing presentations index</h1>
 	</header>
     <section class="slide">
         <h2>Knowledge sharing presentations</h2>
         <ul>
-            <li>Git and GitLab (TBD)</li>
+            <li><a href="git/index.html">Git and GitLab (TBD)</a></li>
             <li><a href="packing-frontend/index.html">Front-end Packing with Webpack</a> </li>
+            <li><a href="react-basics/index.html">React.js basics</a> </li>
             <li><a href="async-js/index.html">Asynchronous JavaScript with Promises and async/await</a> </li>
             <li><a href="javascript-basics/index.html">JavaScript basics ( ECMAScript5 ) </a> </li>
             <li>Modern JavaScript (ECMAScript2015) – TBD </li>
