Add git presentatio to index. Small fixes

--- a/packing-frontend/index.html
+++ b/packing-frontend/index.html
@@ -277,12 +277,12 @@
             <td class="red">✘</td>
         </tr>
         <tr>
-            <th scope="row">Immediate bundling  </th>
+            <th scope="row">Hot reloading</th>
             <td class="green">✔︎</td>
             <td class="red">✘</td>
         </tr>
         <tr>
-            <th scope="row">Hot reloading</th>
+            <th scope="row">Making coffee</th>
             <td class="green">✔︎</td>
             <td class="red">✘</td>
         </tr>
