--- a/git/index.html
+++ b/git/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>JavaScript basics</title>
+	<title>Git basics</title>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +28,7 @@
 </head>
 <body class="shower list">
 	<header class="caption">
-		<h1>JavaScript basics</h1>
+		<h1>Git basics</h1>
 	</header>
 	<section class="slide" id="cover">
         <h2>Git basics</h2>
