Add link to react presentation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="git/index.html">Git and GitLab</a></li>
             <li><a href="packing-frontend/index.html">Front-end Packing with Webpack</a> </li>
+            <li><a href="react-basics/index.html">React.js basics</a> </li>
             <li><a href="async-js/index.html">Asynchronous JavaScript with Promises and async/await</a> </li>
             <li><a href="javascript-basics/index.html">JavaScript basics ( ECMAScript5 ) </a> </li>
             <li>Modern JavaScript (ECMAScript2015) – TBD </li>
