Add JSX example

--- a/react-basics/index.html
+++ b/react-basics/index.html
@@ -59,12 +59,8 @@
         <ul>
             <li>Web sites are turning into Web apps</li>
             <li>Code complexity grows as the app gets bigger</li>
+            <li>It becomes harder to manage the application state and update the view</li>
         </ul>
-    </section>
-
-    <section class="slide">
-        <h2>Back in the 2000's</h2>
-        <p>Demo here</p>
     </section>
 
     <section class="slide">
@@ -136,6 +132,12 @@
     <section class="slide" >
         <h2>Virtual DOM</h2>
         <img src="http://dev.afas.nl/insite-afas/virtual-dom-how-inefficiency-can-lead-to-better-performance/virtual%20dom.png" />
+    </section>
+
+    <section class="slide" >
+        <h2>JSX</h2>
+        <p>An optional preprocessor for HTML-like syntax</p>
+        <iframe src="https://babeljs.io/repl/#?evaluate=true&lineWrap=true&presets=es2015%2Creact%2Cstage-1&experimental=true&loose=false&spec=false&playground=false&code=React.createClass(%7B%0D%20%20%20%20%20%20%20%20render%3A%20function()%20%7B%0D%20%20%20%20%20%20%20%20%20%20%20%20var%20name%20%3D%20'%40UserName'%0D%20%20%20%20%20%20%20%20%20%20%20%20return%20(%0D%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%3E%0D%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20Hello%20%7Bname%7D!%0D%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%2Fdiv%3E%0D%20%20%20%20%20%20%20%20%20%20%20%20)%3B%0D%20%20%20%20%20%20%20%20%7D%0D%20%20%20%20%7D)%3B"></iframe>
     </section>
 
     <section class="slide">
