--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>Flux architecture – TBD </li>
         </ul>
         <style>
-            #main h2 {
+            #main {
                 padding-top: 50px;
             }
         </style>
