--- a/react-basics/index.html
+++ b/react-basics/index.html
@@ -220,9 +220,16 @@
         </ol>
     </section>
 
-    <section class="slide">
+    <section class="slide" id="react-companies">
         <h2>Companies using React.js</h2>
         <p><a href="https://github.com/facebook/react/wiki/Sites-Using-React">A long list of more than 500 companies</a></p>
+        <img src="images/react-companies.png" />
+        <style>
+            #react-companies img {
+                width: 700px;
+                margin-left: 70px;
+            }
+        </style>
     </section>
 
     <section class="slide">
