--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="async-js/index.html">Asynchronous JavaScript with Promises and async/await</a> </li>
             <li><a href="javascript-basics/index.html">JavaScript basics ( ECMAScript5 ) </a> </li>
             <li><a href="css-preprocessors/index.html">CSS Preprocessors</a></li>
+            <li>Open source licences – TBD </li>
             <li>Modern JavaScript (ECMAScript2015) – TBD </li>
             <li>Flux architecture – TBD </li>
         </ul>
